src/test/compile-fail/regions-ret.rs
// error-pattern: mismatched types

fn f(x : &a.int) -> &a.int {
    ret &3;
}

fn main() {
}

